Finished initial PatientView, all tabs implemented with minimal functionality.